--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "./dist/index.node.cjs.js",
   "browser": "./dist/index.browser.mod.js",
   "module": "./dist/index.node.esm.js",
-  "types": "./types/index.d.ts",
+  "types": "./dist/index.d.ts",
   "directories": {
     "build": "./build",
     "dist": "./dist",
@@ -24,8 +24,13 @@
     "test": "./testing/tests"
   },
   "scripts": {
-    "test": "nyc --include dist/index.node.cjs.js --check-coverage mocha testing/bootstrap.js --recursive testing/tests",
-    "coverage": "nyc --include dist/index.node.cjs.js report --reporter=lcov",
+    "clean": "rimraf .nyc_output coverage dist testing/.tests",
+    "test:browser": "node testing/browser/index.js",
+    "pretest:node": "npx tsc -t ESNEXT --lib esnext -m commonjs --esModuleInterop false --outDir testing/.tests --inlineSourceMap testing/tests/*.ts",
+    "test:node": "nyc --check-coverage mocha testing/tests/**/*.js testing/.tests/**/*.js",
+    "posttest:node": "rimraf testing/.tests",
+    "test": "run-s test:*",
+    "coverage": "nyc report --reporter=lcov",
     "build:js": "rollup -c build/rollup.config.js",
     "postbuild:js": "node build/build.dts.js",
     "standard": "ts-standard --fix",
@@ -45,9 +50,7 @@
     ],
     "project": "./tsconfig.json",
     "ignore": [
-      "/testing/tests/browser/",
-      "/dist/index.browser.bundle.iife.js",
-      "/dist/index.browser.bundle.mod.js",
+      "/dist/**/*",
       "/types/index.d.ts",
       "/typings/is-browser.d.ts"
     ]
@@ -58,19 +61,23 @@
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-typescript": "^8.0.0",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
     "chai": "^4.2.0",
     "jsdoc-to-markdown": "^6.0.1",
-    "lodash": "^4.17.20",
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "puppeteer": "^5.5.0",
+    "puppeteer": "^6.0.0",
+    "rimraf": "^3.0.2",
     "rollup": "^2.38.1",
     "rollup-plugin-terser": "^7.0.2",
+    "source-map-support": "^0.5.19",
     "strip-json-comments": "^3.1.1",
     "ts-standard": "^10.0.0",
-    "tslib": "^2.1.0",
     "typescript": "^4.1.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jose": "^3.5.4"
+  }
 }
