--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
   "scripts": {
     "clean": "rimraf .nyc_output coverage dist testing/.tests",
     "test:browser": "node testing/browser/index.js",
-    "pretest:node": "npx tsc -t ESNEXT --lib esnext -m commonjs --esModuleInterop false --outDir testing/.tests --inlineSourceMap testing/tests/*.ts",
-    "test:node": "nyc --check-coverage mocha testing/tests/**/*.js testing/.tests/**/*.js",
-    "posttest:node": "rimraf testing/.tests",
+    "pretest:node": "npx tsc -t ESNEXT --lib esnext -m commonjs --esModuleInterop false --outDir testing/.tests --inlineSourceMap --allowJs testing/tests/*",
+    "test:node": "nyc --check-coverage --reporter=text mocha testing/tests/**/*.js testing/.tests/**/*.js",
+    "posttest:node": "rimraf testing/.tests && nyc report --reporter=lcov",
     "test": "run-s test:*",
-    "coverage": "nyc report --reporter=lcov",
     "build:js": "rollup -c build/rollup.config.js",
     "postbuild:js": "node build/build.dts.js",
     "standard": "ts-standard --fix",
