--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "clean": "rimraf .nyc_output coverage dist testing/.tests",
     "test:browser": "node testing/browser/index.js",
     "pretest:node": "npx tsc -t ESNEXT --lib esnext -m commonjs --esModuleInterop false --outDir testing/.tests --inlineSourceMap --allowJs testing/tests/*",
-    "test:node": "nyc --check-coverage --reporter=text mocha testing/tests/**/*.js testing/.tests/**/*.js",
+    "test:node": "nyc --check-coverage --reporter=text mocha testing/.tests/**/*.js",
     "posttest:node": "rimraf testing/.tests && nyc report --reporter=lcov",
     "test": "run-s test:*",
     "build:js": "rollup -c build/rollup.config.js",
@@ -71,8 +71,6 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.38.1",
     "rollup-plugin-terser": "^7.0.2",
-    "source-map-support": "^0.5.19",
-    "strip-json-comments": "^3.1.1",
     "ts-standard": "^10.0.0",
     "typescript": "^4.1.3"
   },
