--- a/package.json
+++ b/package.json
@@ -25,16 +25,22 @@
   },
   "scripts": {
     "clean": "rimraf .nyc_output coverage dist testing/.tests node_modules",
+    "mocha:tsc": "tsc -p testing ",
+    "mocha:js": "mocha --watch-files testing/.tests,dist/index.node.cjs.js 'testing/.tests/**/*.js' --watch",
+    "mocha:clean": "rimraf testing/.tests",
+    "watch": "tsc-watch -p testing --onFirstSuccess \"npm run mocha:js -- --watch\"",
+    "postwatch": "npm run mocha:clean",
     "test:browser": "node testing/browser/index.js",
-    "pretest:node": "npx tsc -t ESNEXT --lib esnext -m commonjs --esModuleInterop false --outDir testing/.tests --inlineSourceMap --allowJs testing/tests/*",
-    "test:node": "nyc --check-coverage --reporter=text mocha testing/.tests/**/*.js",
-    "posttest:node": "rimraf testing/.tests && nyc report --reporter=lcov",
-    "test": "run-s test:*",
+    "test:node": "run-s mocha:tsc mocha:js mocha:clean",
+    "test": "run-s test:browser test:node",
+    "precoverage": "tsc -p testing",
+    "coverage": "nyc --check-coverage --reporter=text --reporter=lcov mocha 'testing/.tests/**/*.js'",
+    "postcoverage": "npm run mocha:clean",
     "build:js": "rollup -c build/rollup.config.js",
     "postbuild:js": "node build/build.dts.js",
-    "standard": "ts-standard --fix",
+    "lint": "ts-standard --fix",
     "docs": "node build/build.docs.js",
-    "build": "run-s standard build:js docs test",
+    "build": "run-s lint build:js docs test:browser coverage",
     "preversion": "npm run build",
     "postversion": "git push"
   },
@@ -50,7 +56,6 @@
     "project": "./tsconfig.json",
     "ignore": [
       "/dist/**/*",
-      "/types/index.d.ts",
       "/typings/is-browser.d.ts"
     ]
   },
@@ -72,6 +77,7 @@
     "rollup": "^2.38.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-standard": "^10.0.0",
+    "tsc-watch": "^4.2.9",
     "typescript": "^4.1.3"
   },
   "dependencies": {
