private scripts now start with _

--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
   },
   "scripts": {
     "clean": "rimraf .nyc_output coverage dist testing/.tests node_modules",
-    "mocha:tsc": "tsc -p testing ",
-    "mocha:js": "mocha --watch-files testing/.tests,dist/index.node.cjs.js 'testing/.tests/**/*.js' --watch",
-    "mocha:clean": "rimraf testing/.tests",
-    "watch": "tsc-watch -p testing --onFirstSuccess \"npm run mocha:js -- --watch\"",
-    "postwatch": "npm run mocha:clean",
+    "_mocha:tsc": "tsc -p testing ",
+    "_mocha:js": "mocha --watch-files testing/.tests,dist/index.node.cjs.js 'testing/.tests/**/*.js' ",
+    "_mocha:clean": "rimraf testing/.tests",
+    "_watch:tsc": "tsc-watch -p testing --onFirstSuccess \"npm run _mocha:js -- --watch\"",
+    "watch": "run-s -c _watch:tsc _mocha:clean",
     "test:browser": "node testing/browser/index.js",
-    "test:node": "run-s mocha:tsc mocha:js mocha:clean",
+    "test:node": "run-s _mocha:tsc _mocha:js _mocha:clean",
     "test": "run-s test:browser test:node",
     "precoverage": "tsc -p testing",
     "coverage": "nyc --check-coverage --reporter=text --reporter=lcov mocha 'testing/.tests/**/*.js'",
-    "postcoverage": "npm run mocha:clean",
+    "postcoverage": "npm run _mocha:clean",
     "build:js": "rollup -c build/rollup.config.js",
     "postbuild:js": "node build/build.dts.js",
     "lint": "ts-standard --fix",
