--- a/package.json
+++ b/package.json
@@ -20,22 +20,20 @@
     "build": "./build",
     "dist": "./dist",
     "src": "./src",
-    "templates": "./templates",
-    "test": "./testing/tests",
-    "typings": "./typings"
+    "test": "/test"
   },
   "scripts": {
-    "clean": "rimraf .nyc_output coverage dist testing/.tests node_modules",
+    "clean": "rimraf .nyc_output coverage dist .tests node_modules",
     "_mocha:tsc": "tsc --build tsconfig.tests.json ",
-    "_mocha:js": "mocha --watch-files testing/.tests,dist/index.d.ts 'testing/.tests/**/*.js' ",
-    "_mocha:clean": "rimraf testing/.tests",
+    "_mocha:js": "mocha --watch-files .test,dist/index.d.ts '.tests/**/*.js' ",
+    "_mocha:clean": "rimraf .tests",
     "_watch:tsc": "tsc-watch --build tsconfig.tests.json --onFirstSuccess \"npm run _mocha:js -- --watch\"",
     "watch": "run-s -c _mocha:clean _watch:tsc",
-    "test:browser": "node testing/browser/index.js",
+    "test:browser": "node build/browser-testing/index.js",
     "test:node": "run-s _mocha:tsc _mocha:js _mocha:clean",
     "test": "run-s test:browser test:node",
     "precoverage": "npm run _mocha:tsc",
-    "coverage": "nyc --check-coverage --reporter=text --reporter=lcov mocha 'testing/.tests/**/*.js'",
+    "coverage": "nyc --check-coverage --reporter=text --reporter=lcov mocha '.tests/**/*.js'",
     "postcoverage": "npm run _mocha:clean",
     "build:js": "rollup -c build/rollup.config.js",
     "postbuild:js": "node build/build.dts.js",
@@ -57,8 +55,7 @@
     ],
     "project": "./tsconfig.json",
     "ignore": [
-      "/dist/**/*",
-      "/typings/is-browser.d.ts"
+      "/dist/**/*"
     ]
   },
   "devDependencies": {
@@ -75,7 +72,7 @@
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "puppeteer": "^6.0.0",
+    "puppeteer": "^7.0.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.1",
     "rollup-plugin-terser": "^7.0.2",
