--- a/package.json
+++ b/package.json
@@ -24,17 +24,19 @@
   },
   "scripts": {
     "clean": "rimraf .nyc_output coverage dist .tests",
-    "_mocha:tsc": "tsc --build tsconfig.tests.json ",
-    "_mocha:js": "mocha --watch-files .tests,dist/index.d.ts '.tests/**/*.js' ",
-    "_mocha:clean": "rimraf .tests",
-    "_watch:tsc": "tsc-watch --build tsconfig.tests.json --preserveWatchOutput --onFirstSuccess \"npm run _mocha:js -- --watch\"",
-    "watch": "run-s -c _mocha:clean _watch:tsc",
-    "test:browser": "node build/browser-testing/index.js",
-    "test:node": "run-s _mocha:tsc _mocha:js _mocha:clean",
+    "tsc:tests": "tsc -b tsconfig.tests.json",
+    "tsc:clean": "tsc -b tsconfig.tests.json",
+    "premocha": "npm run tsc:tests",
+    "mocha": "mocha --require build/testing/node/register-chai.js build/testing/node/mocha-init.js ",
+    "postmocha": "npm run tsc:clean",
+    "mocha-watch": "mocha --require build/testing/node/register-chai.js --require build/testing/node/register-ts-watcher.js --watch-files .tests,dist/index.d.ts --watch build/testing/node/mocha-init.js ",
+    "watch": "npm run mocha-watch -- '.tests/**/*.js'",
+    "test:browser": "node build/testing/browser/index.js",
+    "test:node": "npm run mocha -- '.tests/**/*.js'",
     "test": "run-s test:browser test:node",
-    "precoverage": "npm run _mocha:tsc",
-    "coverage": "nyc --check-coverage --reporter=text --reporter=lcov mocha '.tests/**/*.js'",
-    "postcoverage": "npm run _mocha:clean",
+    "precoverage": "tsc -b tsconfig.tests.json",
+    "coverage": "nyc --check-coverage --exclude build/**/*.js --reporter=text --reporter=lcov mocha --require build/testing/node/register-chai.js build/testing/node/mocha-init.js '.tests/**/*.js'",
+    "postcoverage": "rimraf .tests",
     "prebuild:js": "link-module-alias",
     "build:js": "rollup -c build/rollup.config.js",
     "postbuild:js": "node build/build.dts.js",
@@ -77,7 +79,6 @@
     "rollup": "^2.38.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-standard": "^10.0.0",
-    "tsc-watch": "^4.2.9",
     "typescript": "^4.1.3"
   },
   "dependencies": {
