proper tests cleaning

--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
   },
   "scripts": {
     "clean": "rimraf .nyc_output coverage dist .tests",
-    "tsc:tests": "tsc -b tsconfig.tests.json",
-    "tsc:clean": "tsc -b tsconfig.tests.json",
-    "premocha": "npm run tsc:tests",
+    "_tsc:tests": "tsc -b tsconfig.tests.json",
+    "_tsc:clean": "rimraf .tests",
+    "premocha": "npm run _tsc:tests",
     "mocha": "mocha --require build/testing/node/register-chai.js build/testing/node/mocha-init.js ",
-    "postmocha": "npm run tsc:clean",
+    "postmocha": "npm run _tsc:clean",
     "mocha-watch": "mocha --require build/testing/node/register-chai.js --require build/testing/node/register-ts-watcher.js --watch-files .tests,dist/index.d.ts --watch build/testing/node/mocha-init.js ",
     "watch": "npm run mocha-watch -- '.tests/**/*.js'",
     "test:browser": "node build/testing/browser/index.js",
     "test:node": "npm run mocha -- '.tests/**/*.js'",
     "test": "run-s test:browser test:node",
-    "precoverage": "tsc -b tsconfig.tests.json",
-    "coverage": "nyc --check-coverage --exclude build/**/*.js --reporter=text --reporter=lcov mocha --require build/testing/node/register-chai.js build/testing/node/mocha-init.js '.tests/**/*.js'",
-    "postcoverage": "rimraf .tests",
+    "precoverage": "npm run _tsc:tests",
+    "coverage": "nyc --check-coverage --exclude build/**/*.js --exclude **/*.spec.{js,ts} --exclude test/**/*.{js,ts} --reporter=text --reporter=lcov mocha --require build/testing/node/register-chai.js build/testing/node/mocha-init.js '.tests/**/*.js'",
+    "postcoverage": "npm run _tsc:clean",
     "prebuild:js": "link-module-alias",
     "build:js": "rollup -c build/rollup.config.js",
     "postbuild:js": "node build/build.dts.js",
