--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "chai": "^4.2.0",
-    "jsdoc-to-markdown": "^6.0.1",
     "link-module-alias": "^1.2.0",
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
@@ -79,10 +78,13 @@
     "rollup": "^2.38.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-standard": "^10.0.0",
+    "typedoc": "^0.20.23",
+    "typedoc-plugin-markdown": "^3.4.5",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "jose": "^3.5.4"
+    "jose": "^3.5.4",
+    "rollup-plugin-typescript2": "^0.29.0"
   },
   "_moduleAliases": {
     "~root": "."
