--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "/test"
   },
   "scripts": {
-    "clean": "rimraf .nyc_output coverage dist .tests",
+    "clean": "rimraf .nyc_output coverage dist .tests docs",
     "_tsc:tests": "tsc -b tsconfig.tests.json",
     "_tsc:clean": "rimraf .tests",
     "premocha": "npm run _tsc:tests",
@@ -83,8 +83,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "jose": "^3.5.4",
-    "rollup-plugin-typescript2": "^0.29.0"
+    "jose": "^3.5.4"
   },
   "_moduleAliases": {
     "~root": "."
