--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@my-org/my-package-name",
+  "name": "@my-scope/my-package-name",
   "version": "0.9.0",
   "description": "My package is wonderful",
   "keywords": [
@@ -23,28 +23,27 @@
     "test": "/test"
   },
   "scripts": {
+    "build": "run-s lint build:js docs test:browser coverage",
+    "prebuild:js": "link-module-alias",
+    "build:js": "rollup -c build/rollup.config.js",
+    "postbuild:js": "node build/build.dts.js",
     "clean": "rimraf .nyc_output coverage dist .tests docs",
-    "_tsc:tests": "tsc -b tsconfig.tests.json",
-    "_tsc:clean": "rimraf .tests",
+    "precoverage": "npm run _tsc:tests",
+    "coverage": "nyc --check-coverage --exclude build --exclude **/*.spec.ts --exclude test/**/*.ts --reporter=text --reporter=lcov mocha --require build/testing/node/register-chai.js build/testing/node/mocha-init.js '.tests/**/*.js'",
+    "postcoverage": "npm run _tsc:clean",
+    "docs": "node build/build.docs.js",
+    "lint": "ts-standard --fix",
     "premocha": "npm run _tsc:tests",
     "mocha": "mocha --require build/testing/node/register-chai.js build/testing/node/mocha-init.js ",
     "postmocha": "npm run _tsc:clean",
     "mocha-watch": "mocha --require build/testing/node/register-chai.js --require build/testing/node/register-ts-watcher.js --watch-files .tests,dist/index.d.ts --watch build/testing/node/mocha-init.js ",
-    "watch": "npm run mocha-watch -- '.tests/**/*.js'",
+    "preversion": "npm run build",
+    "test": "run-s test:browser test:node",
     "test:browser": "node build/testing/browser/index.js",
     "test:node": "npm run mocha -- '.tests/**/*.js'",
-    "test": "run-s test:browser test:node",
-    "precoverage": "npm run _tsc:tests",
-    "coverage": "nyc --check-coverage --exclude build --exclude **/*.spec.ts --exclude test/**/*.ts --reporter=text --reporter=lcov mocha --require build/testing/node/register-chai.js build/testing/node/mocha-init.js '.tests/**/*.js'",
-    "postcoverage": "npm run _tsc:clean",
-    "prebuild:js": "link-module-alias",
-    "build:js": "rollup -c build/rollup.config.js",
-    "postbuild:js": "node build/build.dts.js",
-    "lint": "ts-standard --fix",
-    "docs": "node build/build.docs.js",
-    "build": "run-s lint build:js docs test:browser coverage",
-    "preversion": "npm run build",
-    "postversion": "git push"
+    "watch": "npm run mocha-watch -- '.tests/**/*.js'",
+    "_tsc:tests": "tsc -b tsconfig.tests.json",
+    "_tsc:clean": "rimraf .tests"
   },
   "ts-standard": {
     "env": [
@@ -63,27 +62,27 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-multi-entry": "^4.0.0",
-    "@rollup/plugin-node-resolve": "^11.1.0",
-    "@rollup/plugin-replace": "^2.3.4",
-    "@rollup/plugin-typescript": "^8.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-replace": "^2.4.1",
+    "@rollup/plugin-typescript": "^8.2.0",
     "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0",
+    "@types/mocha": "^8.2.1",
     "chai": "^4.2.0",
     "link-module-alias": "^1.2.0",
-    "mocha": "^8.2.1",
+    "mocha": "^8.3.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "puppeteer": "^7.0.1",
+    "puppeteer": "^8.0.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.38.1",
+    "rollup": "^2.40.0",
     "rollup-plugin-terser": "^7.0.2",
     "ts-standard": "^10.0.0",
-    "typedoc": "^0.20.23",
-    "typedoc-plugin-markdown": "^3.4.5",
-    "typescript": "^4.1.3"
+    "typedoc": "^0.20.28",
+    "typedoc-plugin-markdown": "^3.6.0",
+    "typescript": "^4.2.2"
   },
   "dependencies": {
-    "jose": "^3.5.4"
+    "jose": "^3.6.2"
   },
   "_moduleAliases": {
     "~root": "."
