--- a/package.json
+++ b/package.json
@@ -23,28 +23,21 @@
     "test": "./test",
     "tmp": "./.tmp"
   },
+  "bin": "./build/bin/mocha-ts.js",
   "scripts": {
     "build": "run-s lint build:js docs test:browser coverage",
-    "prebuild:js": "link-module-alias",
-    "build:js": "rollup -c build/rollup.config.js",
-    "postbuild:js": "node build/build.dts.js",
-    "clean": "rimraf .nyc_output coverage dist .tests docs",
-    "precoverage": "npm run _tsc:tests",
-    "coverage": "nyc --check-coverage --exclude build --exclude **/*.spec.ts --exclude test/**/*.ts --reporter=text --reporter=lcov mocha --require build/testing/node/mocha-init.js '.tmp/tests**/*.js'",
-    "postcoverage": "npm run _tsc:clean",
+    "build:js": "rollup -c build/rollup.config.cjs",
+    "clean": "rimraf .nyc_output .tmp coverage dist docs",
+    "coverage": "nyc --check-coverage --exclude build --exclude '{src/**/*.spec.ts,test/**/*.ts}' --reporter=text --reporter=lcov node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js '{src/**/*.spec.ts,test/**/*.ts}'",
     "docs": "node build/build.docs.js",
     "lint": "ts-standard --fix",
-    "premocha": "npm run _tsc:tests",
-    "mocha": "mocha --require build/testing/node/mocha-init.js ",
-    "postmocha": "npm run _tsc:clean",
-    "mocha-watch": "mocha --require build/testing/node/mocha-init.js --require build/testing/node/watchers --watch-files .tmp/**/semaphore --watch ",
+    "mocha": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
+    "mocha-watch": "npm run mocha -- --watch-files .tmp/**/semaphore --watch ",
     "preversion": "npm run build",
     "test": "run-s test:browser test:node",
     "test:browser": "node build/testing/browser/index.js",
-    "test:node": "npm run mocha -- '.tmp/tests/**/*.js'",
-    "watch": "npm run mocha-watch -- '.tmp/tests/**/*.js'",
-    "_tsc:tests": "tsc -b tsconfig.tests.json",
-    "_tsc:clean": "rimraf .tests"
+    "test:node": "npm run mocha -- '{src/**/*.spec.ts,test/**/*.ts}'",
+    "watch": "npm run mocha-watch -- '{src/**/*.spec.ts,test/**/*.ts}'"
   },
   "ts-standard": {
     "env": [
@@ -71,11 +64,14 @@
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.1",
     "chai": "^4.2.0",
+    "glob": "^7.1.6",
     "json5": "^2.2.0",
     "link-module-alias": "^1.2.0",
+    "minimatch": "^3.0.4",
     "mocha": "^8.3.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
+    "pirates": "^4.0.1",
     "puppeteer": "^8.0.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.40.0",
@@ -87,8 +83,5 @@
   },
   "dependencies": {
     "jose": "^3.6.2"
-  },
-  "_moduleAliases": {
-    "~root": "."
   }
 }
