--- a/package.json
+++ b/package.json
@@ -20,24 +20,22 @@
     "build": "./build",
     "dist": "./dist",
     "src": "./src",
-    "test": "./test",
-    "tmp": "./.tmp"
+    "test": "./test"
   },
   "bin": "./build/bin/mocha-ts.js",
   "scripts": {
     "build": "run-s lint build:js docs test:browser coverage",
     "build:js": "rollup -c build/rollup.config.cjs",
-    "clean": "rimraf .nyc_output .tmp coverage dist docs",
+    "clean": "rimraf .nyc_output .mocha-ts coverage dist docs",
     "coverage": "nyc --check-coverage --exclude build --exclude '{src/**/*.spec.ts,test/**/*.ts}' --reporter=text --reporter=lcov node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js '{src/**/*.spec.ts,test/**/*.ts}'",
     "docs": "node build/build.docs.js",
     "lint": "ts-standard --fix",
     "mocha": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
-    "mocha-watch": "npm run mocha -- --watch-files .tmp/**/semaphore --watch ",
     "preversion": "npm run build",
     "test": "run-s test:browser test:node",
     "test:browser": "node build/testing/browser/index.js",
     "test:node": "npm run mocha -- '{src/**/*.spec.ts,test/**/*.ts}'",
-    "watch": "npm run mocha-watch -- '{src/**/*.spec.ts,test/**/*.ts}'"
+    "watch": "npm run mocha -- --watch '{src/**/*.spec.ts,test/**/*.ts}'"
   },
   "ts-standard": {
     "env": [
@@ -52,7 +50,7 @@
     ],
     "project": "./tsconfig.json",
     "ignore": [
-      "/dist/**/*"
+      "dist/**/*"
     ]
   },
   "devDependencies": {
@@ -75,6 +73,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.40.0",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
     "ts-standard": "^10.0.0",
     "typedoc": "^0.20.28",
     "typedoc-plugin-markdown": "^3.6.0",
