reverted type=module for issues with mocha

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "email": "email@myemaildomain.com"
   },
   "repository": "repoprovider:username/my-package-name",
-  "type": "module",
   "types": "./dist/esm/types/index.d.ts",
   "main": "./dist/cjs/index.node.cjs",
   "browser": "./dist/esm/index.browser.js",
@@ -34,18 +33,17 @@
     "src": "./src",
     "test": "./test"
   },
-  "bin": "./build/bin/mocha-ts.js",
   "scripts": {
     "build": "run-s lint build:js docs test:browser coverage",
-    "build:js": "rollup -c build/rollup.config.cjs",
+    "build:js": "rollup -c build/rollup.config.js",
     "clean": "rimraf .nyc_output .mocha-ts coverage dist docs",
-    "coverage": "nyc --check-coverage --exclude build --exclude '{src/**/*.spec.ts,test/**/*.ts}' --reporter=text --reporter=lcov node ./build/bin/mocha-ts.cjs --require build/testing/mocha/mocha-init.cjs '{src/**/*.spec.ts,test/**/*.ts}'",
-    "docs": "node build/build.docs.cjs",
+    "coverage": "nyc --check-coverage --exclude build --exclude '{src/**/*.spec.ts,test/**/*.ts}' --reporter=text --reporter=lcov node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js '{src/**/*.spec.ts,test/**/*.ts}'",
+    "docs": "node build/build.docs.js",
     "lint": "ts-standard --fix",
-    "mocha": "node ./build/bin/mocha-ts.cjs --require build/testing/mocha/mocha-init.cjs ",
+    "mocha": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
     "preversion": "npm run build",
     "test": "run-s test:browser test:node",
-    "test:browser": "node build/testing/browser/index.cjs",
+    "test:browser": "node build/testing/browser/index.js",
     "test:node": "npm run mocha -- '{src/**/*.spec.ts,test/**/*.ts}'",
     "watch": "npm run mocha -- --watch '{src/**/*.spec.ts,test/**/*.ts}'"
   },
@@ -73,7 +71,7 @@
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.1",
-    "chai": "^4.2.0",
+    "chai": "^4.3.3",
     "glob": "^7.1.6",
     "json5": "^2.2.0",
     "minimatch": "^3.0.4",
@@ -87,7 +85,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-standard": "^10.0.0",
-    "typedoc": "^0.20.28",
+    "tslib": "^2.1.0",
+    "typedoc": "^0.20.29",
     "typedoc-plugin-markdown": "^3.6.0",
     "typescript": "^4.2.2"
   },
