src/README.md moved to src/docs/index.md

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "directories": {
     "build": "./build",
     "dist": "./dist",
+    "docs": "./docs",
     "src": "./src",
     "test": "./test"
   },
