--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "build": "run-s lint build:js docs test:browser coverage",
     "build:js": "rollup -c build/rollup.config.js",
     "clean": "rimraf .nyc_output .mocha-ts coverage dist docs",
-    "coverage": "nyc --check-coverage --exclude build --exclude '{src/**/*.spec.ts,test/**/*.ts}' --reporter=text --reporter=lcov node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js '{src/**/*.spec.ts,test/**/*.ts}'",
+    "coverage": "nyc --check-coverage --exclude build --exclude '{src/ts/**/*.spec.ts,test/**/*.ts}' --reporter=text --reporter=lcov node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js '{src/ts/**/*.spec.ts,test/**/*.ts}'",
     "docs": "node build/build.docs.js",
     "lint": "ts-standard --fix",
     "mocha": "node ./build/bin/mocha-ts.js --require build/testing/mocha/mocha-init.js ",
@@ -46,8 +46,8 @@
     "postversion": "npm run docs",
     "test": "run-s test:browser test:node",
     "test:browser": "node build/testing/browser/index.js",
-    "test:node": "npm run mocha -- '{src/**/*.spec.ts,test/**/*.ts}'",
-    "watch": "npm run mocha -- --watch '{src/**/*.spec.ts,test/**/*.ts}'"
+    "test:node": "npm run mocha -- '{src/ts/**/*.spec.ts,test/**/*.ts}'",
+    "watch": "npm run mocha -- --watch '{src/ts/**/*.spec.ts,test/**/*.ts}'"
   },
   "ts-standard": {
     "env": [
@@ -72,8 +72,10 @@
     "@rollup/plugin-replace": "^2.4.1",
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/chai": "^4.2.14",
+    "@types/chai-as-promised": "^7.1.3",
     "@types/mocha": "^8.2.1",
     "chai": "^4.3.3",
+    "chai-as-promised": "^7.1.1",
     "glob": "^7.1.6",
     "json5": "^2.2.0",
     "minimatch": "^3.0.4",
@@ -92,6 +94,6 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "jose": "^3.6.2"
+    "jose": "^3.11.1"
   }
 }
