--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,5 +35,5 @@
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["src/**/*", "build/typings/**/*", "test/**/*"]
+  "include": ["src/ts/**/*", "build/typings/**/*", "test/**/*"]
 }
