--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
+    "@types/create-hash": "^1.2.2",
     "@types/mocha": "^8.2.1",
     "chai": "^4.3.3",
     "chai-as-promised": "^7.1.1",
