--- a/packages/sw-wallet/package.json
+++ b/packages/sw-wallet/package.json
@@ -17,7 +17,9 @@
     "name": "HD SW Wallet",
     "features": {
       "store": {
-        "encryption": { "enabled": true }
+        "encryption": {
+          "enabled": true
+        }
       }
     }
   },
@@ -47,6 +49,7 @@
     "npm-run-all": "^4.1.5",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
-    "ts-standard": "^10.0.0"
+    "ts-standard": "^10.0.0",
+    "typescript": "^4.4.3"
   }
 }
