--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -74,10 +74,12 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@i3-market/base-wallet": "^0.9.0",
     "@i3-market/sw-wallet": "^0.9.0",
+    "@i3-market/bok-wallet": "^0.9.0",
     "@i3-market/wallet-desktop-openapi": "^0.9.0",
     "cors": "^2.8.5",
     "electron-connect": "^0.6.3",
     "electron-store": "^7.0.3",
+    "ethers": "^5.4.7",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.11.0",
     "jose": "^3.6.2",
