--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "i3m-wallet-monorepo",
-  "version": "1.0.1",
+  "version": "0.9.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prepare": "lerna bootstrap && lerna run build",
+    "prepare": "run-s bootstrap build",
+    "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
+    "build:watch": "lerna run --parallel --stream build:watch",
     "clean": "lerna clean",
-    "start": "npx lerna run --scope wallet-desktop start",
+    "start": "lerna run --scope wallet-desktop start",
+    "start:dev:desktop": "lerna run --stream start:dev",
+    "start:dev": "run-p build:watch start:dev:desktop",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Fernando Roman Garcia",
   "license": "ISC",
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "npm-run-all": "^4.1.5"
   }
 }
