--- a/packages/base-wallet/package.json
+++ b/packages/base-wallet/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build:ts": "tsc --project tsconfig.build.json",
     "build:iwallet": "ts-node build/walletInterface.ts",
-    "build:watch": "tsc -w --project tsconfig.build.json",
+    "build:watch": "tsc -w --preserveWatchOutput --project tsconfig.build.json",
     "build": "run-s build:iwallet build:ts",
     "lint": "ts-standard --fix",
     "postbuild": "npm run lint",
@@ -48,7 +48,7 @@
     ]
   },
   "dependencies": {
-    "@i3-market/wallet-desktop-openapi": "^0.8.1",
+    "@i3-market/wallet-desktop-openapi": "^0.9.0",
     "@veramo/core": "^1.2.0",
     "@veramo/credential-w3c": "^1.2.0",
     "@veramo/did-jwt": "^1.2.0",
