--- a/packages/sw-wallet/package.json
+++ b/packages/sw-wallet/package.json
@@ -24,10 +24,10 @@
       }
     },
     "functions": [
-      { "name": "Wipe", "call": "wipe" },
-      { "name": "Execute Transaction", "call": "executeTransaction" },
-      { "name": "Create Transaction", "call": "createTransaction" },
-      { "name": "Query Balance", "call": "queryBalance" }
+      { "name": "Wipe", "call": "wipe", "scopes": ["wallet"] },
+      { "name": "Execute Transaction", "call": "executeTransaction", "scopes": ["developer"] },
+      { "name": "Create Transaction", "call": "createTransaction", "scopes": ["developer"] },
+      { "name": "Query Balance", "call": "queryBalance", "scopes": ["developer"] }
     ]
   },
   "publishConfig": {
