--- a/packages/sw-wallet/package.json
+++ b/packages/sw-wallet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@i3-market/sw-wallet",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -24,10 +24,34 @@
       }
     },
     "functions": [
-      { "name": "Wipe", "call": "wipe", "scopes": ["wallet"] },
-      { "name": "Execute Transaction", "call": "executeTransaction", "scopes": ["developer"] },
-      { "name": "Create Transaction", "call": "createTransaction", "scopes": ["developer"] },
-      { "name": "Query Balance", "call": "queryBalance", "scopes": ["developer"] }
+      {
+        "name": "Wipe",
+        "call": "wipe",
+        "scopes": [
+          "wallet"
+        ]
+      },
+      {
+        "name": "Execute Transaction",
+        "call": "executeTransaction",
+        "scopes": [
+          "developer"
+        ]
+      },
+      {
+        "name": "Create Transaction",
+        "call": "createTransaction",
+        "scopes": [
+          "developer"
+        ]
+      },
+      {
+        "name": "Query Balance",
+        "call": "queryBalance",
+        "scopes": [
+          "developer"
+        ]
+      }
     ]
   },
   "publishConfig": {
@@ -37,7 +61,7 @@
   "license": "MIT",
   "dependencies": {
     "@ethersproject/hdnode": "^5.3.0",
-    "@i3-market/base-wallet": "^0.9.0",
+    "@i3-market/base-wallet": "^0.9.1",
     "debug": "^4.3.1",
     "did-jwt": "^5.2.0",
     "ethers": "^5.3.0",
