--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:dev": "run-p build:watch start:dev:desktop",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "private": true,
   "keywords": [],
   "author": "Fernando Roman Garcia",
   "license": "ISC",
