--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i3m-wallet-monorepo",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,10 @@
     "start": "lerna run --scope wallet-desktop start",
     "start:dev:desktop": "lerna run --stream start:dev",
     "start:dev": "run-p build:watch start:dev:desktop",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pack:lin": "lerna run --stream pack:lin",
+    "pack:mac": "lerna run --stream pack:mac",
+    "pack:win": "lerna run --stream pack:win"
   },
   "private": true,
   "keywords": [],
