Fixed dmg artifact

--- a/packages/wallet-desktop/electron-builder.yml
+++ b/packages/wallet-desktop/electron-builder.yml
@@ -9,6 +9,7 @@ directories:
 mac:
   target:
     - dmg
+  artifactName: ${name}-${version}-${arch}.${ext}
   category: public.app-category.productivity
 
 # Windows configurations
