--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:dev:desktop": "lerna run --stream start:dev",
     "start:dev": "run-p build:watch start:dev:desktop",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "publish:nexus": "dotenv run ./scripts/publish.sh",
+    "publish:nexus": "dotenv -- ./scripts/publish.sh",
     "pack:lin": "lerna run --stream pack:lin",
     "pack:mac": "lerna run --stream pack:mac",
     "pack:win": "lerna run --stream pack:win"
@@ -23,10 +23,9 @@
   "author": "Fernando Roman Garcia",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^10.0.0",
+    "dotenv-cli": "^4.0.0",
     "lerna": "^4.0.0",
     "npm-run-all": "^4.1.5"
-  },
-  "dependencies": {
-    "dotenv": "^10.0.0"
   }
 }
