--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ build_lin:
   image:
     name: node:14.16.0
   script:
-    - npm i
+    - npm i --unsafe-perm
     - npm run pack:lin
   artifacts:
     paths:
