Added wallet protocol fist release

--- a/packages/wallet-desktop/package.json
+++ b/packages/wallet-desktop/package.json
@@ -41,6 +41,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/fs-extra": "^9.0.7",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/lodash": "^4.14.168",
     "@types/module-alias": "^2.0.0",
     "@types/morgan": "^1.9.2",
@@ -76,16 +77,19 @@
     "@i3-market/bok-wallet": "^0.9.2",
     "@i3-market/sw-wallet": "^0.9.2",
     "@i3-market/wallet-desktop-openapi": "^0.9.2",
+    "@i3-market/wallet-protocol": "^0.1.0",
     "cors": "^2.8.5",
     "electron-connect": "^0.6.3",
     "electron-store": "^7.0.3",
     "ethers": "^5.4.7",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.11.0",
-    "jose": "^3.6.2",
+    "jose": "^4.3.7",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
+    "pbkdf2-hmac": "^1.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
