--- a/package.json
+++ b/package.json
@@ -97,6 +97,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "bigint-conversion": "^2.2.1",
+    "bigint-crypto-utils": "^3.0.21",
     "jose": "^4.3.7",
     "object-sha": "^2.0.6"
   }
