updated repo data. new keywords

--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.9.1",
   "description": "Library for the i3-market non-repudiation protocol that helps generate/verifying the necessary proofs and the received block of data",
   "keywords": [
+    "non-repudiation",
     "non-repudiation protocol",
+    "proof of origin",
+    "poo",
+    "proof of reception",
+    "por",
+    "proof of publication",
+    "pop",
     "jws",
     "i3m",
     "i3-MARKET"
   ],
   "license": "EUPL-1.2",
-  "repository": "gitlab:i3-market/code/wp3/t3.3/non-repudiable-exchange/non-repudiable-proofs",
+  "repository": "gitlab:i3-market/code/wp3/t3.2/conflict-resolution/non-repudiation-protocol",
   "types": "./types/index.d.ts",
   "main": "./dist/cjs/index.node.cjs",
   "browser": "./dist/esm/index.browser.js",
