--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,8 @@
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
+    // "resolveJsonModule": true
+
   },
   "include": ["src/ts/**/*", "build/typings/**/*", "test/**/*"]
 }
