--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@juanelas/base64": "^1.0.4",
     "bigint-conversion": "^2.2.1",
     "bigint-crypto-utils": "^3.0.21",
     "ethers": "^5.5.2",
