--- a/package.json
+++ b/package.json
@@ -77,13 +77,16 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-replace": "^3.0.0",
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/chai": "^4.2.22",
     "@types/chai-as-promised": "^7.1.4",
+    "@types/elliptic": "^6.4.14",
     "@types/mocha": "^9.0.0",
+    "@types/node": "^16.11.11",
     "chai": "^4.3.3",
     "chai-as-promised": "^7.1.1",
     "fs-extra": "^10.0.0",
@@ -108,6 +111,7 @@
     "@juanelas/base64": "^1.0.4",
     "bigint-conversion": "^2.2.1",
     "bigint-crypto-utils": "^3.0.21",
+    "elliptic": "^6.5.4",
     "ethers": "^5.5.2",
     "jose": "^4.3.7",
     "object-sha": "^2.0.6"
