--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "ES2020",                       /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
     // "lib": [ "es2020" ],                   /* Specify library files to be included in the compilation. */
-    "module": "ES2020",
+    // "module": "ES2020",
     "allowJs": true,                          /* Allow javascript files to be compiled. */
     "outDir": ".dst",                         /* If not set we cannot import .js files without a warning that is going to be overwritten. outDir is not going to be used in any case */
     "checkJs": true,                          /* Report errors in .js files. */
@@ -35,9 +35,8 @@
 
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
-    "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
-    // "resolveJsonModule": true
-
+    "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
+    "resolveJsonModule": true
   },
   "include": ["src/ts/**/*", "build/typings/**/*", "test/**/*"]
 }
