ready for migration to the new smart contract

--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "project": "./tsconfig.json",
     "ignore": [
       "dist/**/*",
-      "types/**/*"
+      "types/**/*",
+      "build/testing/types/**/*"
     ]
   },
   "devDependencies": {
